# smart-email-agent-env

./: .dockerignore  .gitignore  .huggingfaceignore  Dockerfile  README.md  __init__.py  check_hf.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py  env.py
tests/: test_env.py
